# efektivemobile

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README2.md  TASK.md  docker-compose-elk.yml  docker-compose-prometheus.yml  docker-compose.yml  entrypoint.sh  filebeat.yml  logstash.conf  main.py  prometheus.yml  promtail.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 10c1c005cb0b_auto_generated_migration.py  18e3f24bfc8b_auto_generated_migration.py  2955da7260c4_auto_generated_migration.py  2b5a8dc354e7_auto_generated_migration.py  557efc557696_uto_generated_migration.py  6e1ae2a1f2f7_user_roles.py  781afc555889_auto_generated_migration.py  877f5c2fd022_auto_generated_migration.py  b30f10c59d00_auto_generated_migration.py  d021dc1b002b_auto_generated_migration.py  dac4dff09ec9_auto_generated_migration.py  fca4cf2c0aa0_auto_generated_migration.py
app/: main.py
app/core/: blacklist.py  config.py  enums.py  security.py  structlog_configure.py  stubs.py
app/crud/: access_rule.py  base.py  base_m2m.py  business_element.py  category.py  file_upload.py  order.py  product.py  role.py  user.py  user_m2m_role.py  user_role.py
app/db/: base.py  session.py
app/dependencies/: deps.py  get_current_user.py  get_db.py  get_payload_from_jwt.py  permissions.py  private_router.py
data/: Тестовое задание.xlsx
grafana_provisioning/: grafana.ini
kibana-init/: Dockerfile  kibana-import.sh  kibana.yml
uploads/: 2034d539-a27c-4a99-aace-710f7b9cad75.xls  309b91f2-5157-4310-be57-56c220857515.xlsx  f88bd894-5a23-4cfd-b54d-ead455829630.json
(+92 files in other folders)
