[project]
name = "efektivemobile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0",
    "cachetools>=6.2.0",
    "fastapi[standard]>=0.117.1",
    "itsdangerous>=2.2.0",
    "pip-check-reqs>=2.5.5",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "uvicorn>=0.36.0",
    "vulture>=2.14",
]
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
[tool.coverage.run]
source = ["app"]
omit = [
    "app/utils/*",
    "app/main.py",
    "*/__init__.py"
]
